# minfer

./: .gitignore  AGENTS.md  BUG-6-KV-CACHE-INDEXING.md  CPU_OPTIMIZATIONS.md  CUDA_OPTIMIZATION.md  CUDA_PROBLEMS.md  Cargo.toml  DEBUGGING-PLAN.md  DEBUGGING-SUMMARY.md  LICENSE  METAL_OPTIMIZATIONS.md  QWEN2.5-1.5B-BUGS.md  QWEN2.5-DEBUGGING-NOTES.md  README.md  build.rs
examples/: cuda_graph_diag.rs
src/: avx2.rs  block.rs  cache.rs  cuda.rs  cuda_kernels.cu  forward.rs  gguf.rs  kernel.rs  loader.rs  main.rs  metal.metal  metal.rs  model.rs  sampler.rs  template.rs  tensor.rs  tokenizer.rs  vec_ops.rs
src/download/: mod.rs
src/models/: mod.rs
src/models/qwen2/: forward.rs  loader.rs  mod.rs
test/: CUDA_GRAPH_PROGRESS.md
test/cuda_graph/: README.md  test_01_basic_capture.cu  test_02_rms_norm_single.cu  test_03_single_layer.cu  test_04_multi_layer.cu  test_05_with_output_projection.cu
test/cuda_graph_rust/: README.md
