[package]
name = "minfer"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
regex = "1"
half = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
minijinja = { version = "2", default-features = false, features = ["builtins"] }

[features]
cuda = []

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.28"
block = "0.1.6"
